<resources>
    <string name="app_name">CMProjeto</string>
    <string name="appName">Your Smart City</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notes">Notes</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="addNote">Add Note</string>
    <string name="save">Save</string>
    <string name="boxempty">The box is empty</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="editnote">Edit Note</string>
    <string name="Title">Title</string>
    <string name="Desc">Description</string>
    <string name="titlebox">Insert title</string>
    <string name="descriptionbox">Insert description</string>
    <string name="Login_Email">Insert an email</string>
    <string name="Login_Password">Insert a password</string>
    <string name="Error_login">Invalid data</string>
    <string name="title_activity_maps">Map</string>
    <string name="preference_login" translatable="false">LoginSharePreferences</string>
    <string name="LoginShared" translatable="false">loginshared</string>
    <string name="EmailShared" translatable="false">emailshared</string>
    <string name="Id_LoginUser" translatable="false">idloginuser</string>
    <string name="idUser" translatable="false">iduser</string>
    <string name="Logout">Logout</string>
    <string name="LogoutMessage">Are you sure you want to logout?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Back">" Need to log out"</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="typeOcurrencie">Type Occurrence</string>
    <string name="image">Image</string>
    <string name="ErrorupdatePoint">Error to update</string>
    <string name="updatesuccessful">Update Successfully!</string>
    <string name="deletesucessful">Delete Successfully!</string>
    <string name="Errordelete">Error to delete</string>
    <string name="DeletePoint">Are you sure you want to delete this point?</string>
    <string name="deletepointtitle">Delete point</string>

    <string-array name="tipos">
        <item></item>
        <item>@string/accidents</item>
        <item>@string/construction</item>
    </string-array>
    <string name="accidents">Accidents</string>
    <string name="construction">Construction</string>
    <string name="points">Points</string>
    <string name="all">All</string>
    <string name="distance">Distance</string>
    <string name="Distancia5km" translatable="false">5 km</string>
    <string name="Distancia2km" translatable="false">500 m</string>
    <string name="Reset">Reset</string>
    <string name="selectType">Select type occurrence</string>
    <string name="Insertimagename">Insert image name</string>
    <string name="selectImage">Select an image</string>
    <string name="errorInsert">Error to insert</string>
    <string name="Insertpoint">Insert Point</string>
    <string name="EditPoint">Edit/Delete Point</string>
    <string name="savedsucessfull">Saved Successfully!</string>
    <string name="errorSave">Error to Save</string>

</resources>
