<?xml version="1.0" encoding="utf-8"?>

<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/addNote"
            android:src="@drawable/ic_dehaze_black_24dp"
            app:backgroundTint="#fb8c00"
            app:tint="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:fabSize="mini"
            />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/Acidente3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_directions_car_black_24dp"
            app:backgroundTint="#fb8c00"
            app:tint="@android:color/white"
            app:layout_constraintTop_toTopOf="@+id/fab3"
            app:layout_constraintStart_toStartOf="parent"
            app:fabSize="mini"
            android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/Obras3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_warning_black_24dp"
            app:backgroundTint="#fb8c00"
            app:tint="@android:color/white"
            app:layout_constraintTop_toTopOf="@+id/Acidente3"
            app:layout_constraintStart_toStartOf="parent"
            app:fabSize="mini"
            android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/Distancia5km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_warning_black_24dp"
            app:backgroundTint="#fb8c00"
            app:tint="@android:color/white"
            app:layout_constraintTop_toTopOf="@+id/Acidente3"
            app:layout_constraintStart_toStartOf="parent"
            app:fabSize="mini"
            android:visibility="invisible"/>


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:background="#FFF"
            android:layout_alignTop="@+id/bottomBar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp">



            <RadioButton
                android:id="@+id/km2"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:text="@string/Distancia2km"
                android:textStyle="bold"
                android:textSize="16sp"
                ></RadioButton>

            <RadioButton
                android:id="@+id/km5"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/Distancia5km"
                android:textStyle="bold"
                android:textSize="16sp"></RadioButton>

            <RadioButton
                android:id="@+id/All"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textStyle="bold"
                android:textSize="16sp"></RadioButton>


        </RadioGroup>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/addNote"
        android:src="@drawable/ic_add_black_24dp"
        app:backgroundTint="#fb8c00"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="adicionarOcorrencia"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_exit_to_app_black_24dp"
        app:backgroundTint="#fb8c00"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/fab1"
        app:layout_constraintEnd_toEndOf="@id/fab1"
        android:onClick="logout"/>





    </androidx.constraintlayout.widget.ConstraintLayout>
</fragment>


